# Diopter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: vk_layer_settings.txt
data/icon/: icon.res
src/: diopter.cpp  diopter.h  main.cpp
src/gui/: dbg_gui.cpp  dbg_gui.h  imgui_ext.h
src/platform/: icon.res  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  window.cpp  window.h
src/renderer/: ao.cpp  ao.h  geometry.cpp  geometry.h  matpath.cpp  matpath.h  pipeline.h  post.cpp  post.h  renderer.cpp  renderer.h  shading.cpp  shading.h
src/scene/: encode.cpp  encode.h  gltf.cpp  gltf.h  gpu_scene.cpp  gpu_scene.h  pbrt.cpp  pbrt.h  pbrt_const.h  rply.cpp  rply.h
src/shaders/: alpha_mask.hlsl  hit_info.hlsl  khr_builtins.hlsl  precompiled.h  scene.hlsl  util.hlsl
src/shaders/ao/: ao.hlsl  ao.ra.hlsl  ao.rg.hlsl  ao.rh.hlsl  ao.rm.hlsl
src/shaders/geometry/: geometry.hlsl  geometry.ra.hlsl  geometry.rg.hlsl  geometry.rh.hlsl  geometry.rm.hlsl
src/shaders/materials/: gltf.hlsl  interface.hlsl  materials.hlsl  none.hlsl  pbrt_conductor.hlsl  pbrt_dielectric.hlsl  pbrt_diffuse.hlsl  pbrt_diffuse_transmission.hlsl  pbrt_thin_dielectric.hlsl  tungsten_rough_plastic.hlsl  tungsten_smooth_coat.hlsl
src/shaders/matpath/: mp.hlsl  mp.ra.hlsl  mp.rg.hlsl  mp.rh.hlsl  mp.rm.hlsl
src/shaders/post/: post.hlsl
src/shaders/shading/: shading.hlsl  shading.rg.hlsl  shading.rh.hlsl  shading.rm.hlsl
src/util/: camera.cpp  camera.h  image.h
